--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel": "^8.0.0",
     "holy-loader": "^2.2.10",
     "install": "^0.13.0",
     "next": "14.1.3",
